feat(ticket): add event validation and capacity check before purchase